--- a/app/src/main/res/layout/list_detail_activity.xml
+++ b/app/src/main/res/layout/list_detail_activity.xml
@@ -5,15 +5,4 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListDetailActivity" >
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addTaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_add" />
-</FrameLayout>
+    tools:context=".ListDetailActivity" />
