--- a/app/src/main/res/layout/list_detail_fragment.xml
+++ b/app/src/main/res/layout/list_detail_fragment.xml
@@ -7,14 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.detail.ListDetailFragment">
 
-    <ScrollView
+    <EditText
+        android:id="@+id/items_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <EditText
-            android:id="@+id/items_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:text="TextView" />
 </LinearLayout>
