--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/main_act_fragment_container"
+        android:name="com.example.mynotes.ui.main.MainFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
